--- a/src/GUI/MainGUI.form
+++ b/src/GUI/MainGUI.form
@@ -80,14 +80,19 @@
           <text value="Print Size"/>
         </properties>
       </component>
-      <component id="3344a" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+      <scrollpane id="f997">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="3344a" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
